made test.js page for working on css styling, display content styling (positioning, sizing), Entry styling (sizing and positioning forms, ::placeholder and :placeholder-shown for adding overflow rules to placehold text), global variables, added psuedo classes before/after to padding/margin/border-box  defaults, font styling Home, PendingTab styling(correctly displaying cards, dynamically fit to view, overflow hiding, clicking top hides the entire tab), ReviewCard styling(relatively postiioned inside the .row <ul> on PendingTab, text overflow, dynamic resizing and size minimum), other placeholerstyling, color etc

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -3,6 +3,7 @@
 }
 
 .main {
+  font-family: var(--zen);
   min-height: 100vh;
   padding: 4rem 0;
   flex: 1;
@@ -93,6 +94,7 @@
 }
 
 .card h2 {
+  font-family: var(--spartan);
   margin: 0 0 1rem 0;
   font-size: 1.5rem;
 }
