--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -11,6 +11,16 @@ a {
   text-decoration: none;
 }
 
-* {
+*,
+*::before,
+*::after {
+
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
+}
+
+:root {
+--spartan: 'League Spartan', sans-serif;
+--zen: 'Zen Maru Gothic', sans-serif;
 }
